@@ -2,6 +2,7 @@
 #define __AGLWIDGET_H
 
 #include <QGLWidget>
+#include <vector>
 
 class AGLWidget : public QGLWidget
 {
@@ -10,10 +11,15 @@ class AGLWidget : public QGLWidget
 	public:
 		AGLWidget(QWidget *parent = 0);
 
+    void addDisplayList(GLuint dl);
+    void deleteDisplayList(GLuint dl);
+
 	protected:
 		void initializeGL();
 		void paintGL();
 		void resizeGL(int, int);
+
+    std::vector<GLuint> _displayLists;
 };
 
 #endif
